<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="16dp"
  tools:context=".ui.search.SearchActivity">

  <LinearLayout
    android:id="@+id/topBar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:divider="?android:listDivider"
    android:dividerPadding="10dp"
    android:orientation="horizontal"
    android:showDividers="middle"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/user_greetings"
      android:textSize="20sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent" />

    <View
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_weight="1" />

    <ImageButton
      android:id="@+id/toolbar_setting"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_marginEnd="16dp"

      android:background="@android:color/transparent"
      android:src="@drawable/ic_baseline_settings_24" />

    <ImageButton
      android:id="@+id/toolbar_favorite"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_marginEnd="16dp"
      android:background="@android:color/transparent"
      android:contentDescription="@string/favorite"
      android:src="@drawable/ic_favorite_red_24" />

    <ImageView
      android:id="@+id/img_avatar"
      android:layout_width="30dp"
      android:layout_height="30dp"
      android:contentDescription="@string/photo_profile"
      app:layout_constraintEnd_toEndOf="parent"
      tools:src="@tools:sample/avatars" />
  </LinearLayout>

  <EditText
    android:id="@+id/search_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:drawableStart="@drawable/ic_baseline_search_24"
    android:layout_marginTop="16dp"
    android:hint="@string/search"
    android:lines="1"
    android:maxLines="1"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/topBar" />

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/rv_user_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/search_bar"
    app:layout_constraintVertical_bias="0.0"
    tools:listitem="@layout/item_user_github_card" />

  <LinearLayout
    android:id="@+id/view_not_found"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    android:visibility="gone"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginTop="16dp"
    app:layout_constraintTop_toBottomOf="@+id/search_bar">

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/user_is_not_found"
      android:textAlignment="center"
      tools:layout_editor_absoluteX="15dp"
      tools:layout_editor_absoluteY="125dp" />
  </LinearLayout>

  <ProgressBar
    android:id="@+id/progressBar"
    style="?android:attr/progressBarStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>