<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.user.UserGithubDetailActivity">

  <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawHorizontalTrack="true"
    android:scrollbars="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="16dp">

      <ImageView
        android:id="@+id/img_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

      <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textColor="#2196F3"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/img_avatar"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="@+id/img_avatar"
        app:layout_constraintTop_toBottomOf="@+id/img_avatar"
        tools:text="Username" />

      <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/img_avatar"
        app:layout_constraintStart_toStartOf="@+id/img_avatar"
        app:layout_constraintTop_toBottomOf="@+id/tv_username"
        tools:text="@tools:sample/full_names" />

      <TextView
        android:id="@+id/tv_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_name"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        tools:text="Company" />

      <TextView
        android:id="@+id/tv_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_company"
        app:layout_constraintStart_toStartOf="@+id/tv_company"
        app:layout_constraintTop_toBottomOf="@+id/tv_company"
        tools:text="I am bio of this github user" />

      <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="18dp"
        android:theme="@style/Theme.Github"
        android:backgroundTint="@color/yellow_500"
        app:cardCornerRadius="24dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_bio"
        tools:layout_editor_absoluteX="16dp">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:padding="20dp"
          android:weightSum="3"
          android:theme="@style/ThemeOverlay.AppCompat.Light"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintTop_toTopOf="parent">

          <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
              android:id="@+id/textView"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/repository"
              android:textAlignment="center"
              android:textSize="16sp" />

            <TextView
              android:id="@+id/tv_repository_count"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:textSize="30sp"
              android:textStyle="bold"
              tools:text="0" />
          </LinearLayout>

          <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
            app:layout_constraintStart_toEndOf="@+id/linearLayout2"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/followers"
              android:textSize="16sp"
              android:textAlignment="center"
              app:layout_constraintEnd_toStartOf="@+id/textView2"
              app:layout_constraintStart_toEndOf="@+id/textView" />

            <TextView
              android:id="@+id/tv_follower_count"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:textSize="30sp"
              android:textStyle="bold"
              tools:text="0" />
          </LinearLayout>

          <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
              android:id="@+id/textView2"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/following"
              android:textAlignment="center"
              android:textSize="16sp"
              app:layout_constraintEnd_toEndOf="parent" />

            <TextView
              android:id="@+id/tv_following_count"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:textSize="30sp"
              android:textStyle="bold"
              tools:text="0" />
          </LinearLayout>
        </LinearLayout>
      </androidx.cardview.widget.CardView>

      <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:layout_editor_absoluteX="0dp">

        <Button
          android:id="@+id/btn_share"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="8dp"
          android:backgroundTint="@color/black"
          android:drawableEnd="@drawable/ic_baseline_share_24"
          android:drawableTint="@color/white"
          android:text="@string/share"
          android:textAllCaps="false"
          android:textColor="@color/white"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.498"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <Button
          android:id="@+id/btn_view_github"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="8dp"
          android:backgroundTint="@color/black"
          android:drawableEnd="@drawable/ic_baseline_open_in_browser_24"
          android:drawableTint="@color/white"
          android:text="@string/view_browser"
          android:textAllCaps="false"
          android:textColor="@color/white"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.498"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/cardView" />
      </LinearLayout>

      <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

      <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tabs" />

    </androidx.constraintlayout.widget.ConstraintLayout>

  </androidx.core.widget.NestedScrollView>

  <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/fab_favorite"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:fabSize="normal"
    android:contentDescription="@string/favorite"
    android:layout_alignParentBottom="true"
    android:layout_alignParentEnd="true"
    android:layout_margin="32dp"
    android:visibility="gone"
    app:backgroundTint="@color/white"
    android:elevation="0dp"
    app:tint="@color/gray_200"
    tools:visibility="visible"
    android:src="@drawable/ic_favorite_red_24" />

</RelativeLayout >